FILE(GLOB SOURCE_FILES *.cpp)
FILE(GLOB INCLUDE_FILES *.h)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/CDSlib)
ADD_LIBRARY(CDSlib ${SOURCE_FILES} ${INCLUDE_FILES})

PROJECT(testClass)
ADD_EXECUTABLE(testClass ${SOURCE_FILES} ${INCLUDE_FILES})
TARGET_LINK_LIBRARIES(testClass ${MATH_LIBS_TO_USE})
