FILE(GLOB SOURCE_FILES *.cpp)
FILE(GLOB INCLUDE_FILES *.h)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/IVMMoleculeModeling ${PROJECT_SOURCE_DIR}/RigidBodies ${PROJECT_SOURCE_DIR}/CDSlib)
ADD_LIBRARY(Molecules ${SOURCE_FILES} ${INCLUDE_FILES})

ADD_EXECUTABLE(IVMMoleculeTest ${SOURCE_FILES} ${INCLUDE_FILES})
TARGET_LINK_LIBRARIES(IVMMoleculeTest RigidBodies CDSlib ${MATH_LIBS_TO_USE})
